--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
   "name": "quizzzapp-boilerplate",
   "version": "0.1.0",
-  "description": "",
+  "description": "This is the project-setup for our mmp2a",
   "private": true,
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "watch": "webpack --watch --mode development --open"
+    "lint": "./node_modules/.bin/eslint src/js/*.js",
+    "lint-fix": "./node_modules/.bin/eslint --fix src/js/*.js"
   },
   "keywords": [
     "webpack",
-    "boilerplate",
-    "browser-sync",
     "frontend"
   ],
   "author": "Benjamin Joham",
   "devDependencies": {
-    "autoprefixer": "^9.2.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.3",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "acorn": "^6.0.5",
+    "autoprefixer": "^9.1.0",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.4",
+    "cssnano": "^4.0.5",
+    "eslint": "^5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.4.0",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.9.4",
+    "image-webpack-loader": "^4.3.1",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
     "node-sass-glob-importer": "^5.2.0",
     "postcss-loader": "^2.1.6",
+    "prettier": "^1.14.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.21.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
-  },
-  "dependencies": {
-    "lodash": "^4.17.11"
+    "style-loader": "^0.22.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
