--- a/.editorconfig
+++ b/.editorconfig
@@ -1,30 +1,13 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
+# editorconfig.org
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*.{js,html}]
-charset = utf-8
-
-# 4 space indentation
-[*.{js, html, scss}]
 indent_style = space
 indent_size = 2
+trim_trailing_whitespace = true
 
-
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
-
-
-# Matches the exact files either package.json or .travis.yml
-[{package.json}]
-indent_style = space
-indent_size = 2
+[*.md]
+trim_trailing_whitespace = false
