--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
+  "trailingComma": "all",
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
