--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
-  "name": "quizzzapp-boilerplate",
+  "name": "QuizzzApp",
   "version": "0.1.0",
-  "description": "This is the project-setup for our mmp2a",
+  "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
-    "lint": "./node_modules/.bin/eslint src/js/*.js",
-    "lint-fix": "./node_modules/.bin/eslint --fix src/js/*.js"
+    "lint": "eslint --config .eslintrc.js ./src --ext .jsx,.js",
+    "lint-fix": "eslint --fix --config .eslintrc.js ./src --ext .jsx,.js",
+    "build": "npm run lint-fix && webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
-  "keywords": [
-    "webpack",
-    "frontend"
-  ],
-  "author": "Benjamin Joham",
+  "keywords": [],
+  "author": "Benjamin Joham & Viktoria Maurer",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
-    "acorn": "^6.0.5",
     "autoprefixer": "^9.1.0",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
     "eslint": "^5.12.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^1.1.11",
@@ -38,12 +42,22 @@
     "node-sass": "^4.9.2",
     "node-sass-glob-importer": "^5.2.0",
     "postcss-loader": "^2.1.6",
-    "prettier": "^1.14.2",
+    "prettier": "^1.15.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "@types/navigo": "^7.0.1",
+    "acorn": "^6.0.5",
+    "bem-names": "^1.3.2",
+    "chart.js": "^2.7.3",
+    "express": "^4.16.4",
+    "firebase": "^5.7.2",
+    "jsx-dom": "^6.2.1",
+    "navigo": "^7.1.2"
   }
 }
