--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "autoprefixer": "^9.1.0",
     "babel-eslint": "^9.0.0",
@@ -52,6 +54,7 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "@types/navigo": "^7.0.1",
     "acorn": "^6.0.5",
     "bem-names": "^1.3.2",
