--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
     "eslint": "^5.12.0",
