--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.5",
+    "workbox-webpack-plugin": "^3.6.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
@@ -62,6 +63,7 @@
     "express": "^4.16.4",
     "firebase": "^5.7.2",
     "jsx-dom": "^6.2.1",
+    "lodash": "^4.17.11",
     "navigo": "^7.1.2"
   }
 }
