--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "acorn": "^6.0.5",
     "bem-names": "^1.3.2",
     "chart.js": "^2.7.3",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "firebase": "^5.7.2",
     "jsx-dom": "^6.2.1",
